# fastflow-bot

./: .dockerignore  .env.example  .gitignore  .trivyignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fill_hashes.py  main.py  migrate_db.py  pack.py  pyproject.toml  verify_db.py
.github/workflows/: ci.yml
application/services/: vpn.py
core/: config.py  di.py  exceptions.py  logger.py  observability.py  security.py
core/utils/: telegram.py
docs/: ADR-001-Architecture.md  Runbook.md
handlers/: admin.py  error_handler.py  user.py
infrastructure/: database.py  repositories.py  web.py  worker.py
keyboards/: inline.py
middlewares/: throttling.py
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_hash.py  003_add_is_encrypted.py  004_hardening.py
services/: panel.py  scheduler.py
tests/: test_database.py  test_observability.py  test_panel.py  test_repositories.py  test_repositories_exceptions.py  test_security.py  test_services_vpn.py  test_web.py
